tests/error/comptime/pointer_difference18.bz
// error: invalid pointer difference operation with type '*int32'
// note: while evaluating expression at compile time
// note: lhs and rhs addresses point to different subobjects of the same element in this allocation
// note: lhs address is a one-past-the-end pointer with offset 8
// note: rhs address points to a subobject at offset 0
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc([int32, int32], 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, [int32, int32]());

		(&(*p)[1] + 1) - &(*p)[0];
	});
}
